ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-ds
  labels:
    app: monitoring
spec:
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-container
          image: httpd
          ports:
            - containerPort: 80
  selector:
