pod-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-c
      image: nginx
      ports:
        - containerPort: 80
  volumes:
    - name: new-vol
      persistentVolumeClaim:
        claimName: my-pvc
