ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: my-sts
spec:
  template:
