sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: my-sts
  labels:
    app: mysql
spec:
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql
          ports:
            - containerPort: 3306
          # env:
          #   - name: MYSQL_ROOT_PASSWORD
          #     value: "redhat123"
          #   - name: USER_NAME
          #     value: "shubham"
  replicas: 3
  selector:
    matchLabels:
      app: mysql
