my-rc.yml
---
apiVersion: v1
kind: Namespace
metadata: 
 name: test
...

---
apiVersion: v1 
kind: Pod
metadata:
  name: pod1
  labels: 
    app: my-app
spec:
  containers:
   - name: container1
     image: httpd
     ports:
      - containerPort: 80
...

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport1
spec:
  selector: 
   app: my-app
  ports: 
   - protocol: TCP
     port: 80
     targetPort: 80
  type: NodePort
...
