ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.allow-kuard: "true"
spec:
  tls:
  - hosts:
    - coe.ops.getdyl.com
    secretName: kuard-secret
  defaultBackend:
    service:
      name: "kuard"
      port:
        number: 80
  rules:
  - host: coe.ops.getdyl.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
